--- a/index.html
+++ b/index.html
@@ -119,5 +119,83 @@
 			</div>
 		</div>
 	</section>
+    <section class="what_we_do section">
+		<div class="section_view">
+			<img class="what_we_do_background" src="res/images/what_we_do.png">
+			<div class="what_we_do_card">
+				<div class="header what_we_do_card_header">
+					<h1>You may ask what SEO & why do you need it?</h1>
+					<p>
+						Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary.
+					</p>
+				</div>
+				<div class="what_we_do_sample">
+					<img class="what_we_do_icon" src="res/images/what_we_do_icon_00.svg">
+					<div class="what_we_do_sample_summary">
+						<h3>Social Media Marketing</h3>
+						<p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+					</div>
+				</div>
+				<div class="what_we_do_sample">
+					<img class="what_we_do_icon" src="res/images/what_we_do_icon_01.svg">
+					<div class="what_we_do_sample_summary">
+						<h3>Email Marketing</h3>
+						<p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+					</div>
+				</div>
+				<div class="what_we_do_sample">
+					<img class="what_we_do_icon" src="res/images/what_we_do_icon_02.svg">
+					<div class="what_we_do_sample_summary">
+						<h3>SEO Optimization</h3>
+						<p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+    <section class="section fun_fact">
+        <div class="section_view fun_fact_view">
+            <div class="fun_fact_sample">
+                <p class="fun_fact_number">95</p>
+                <p>Happy Clients</p>
+            </div>
+            <img src="res/images/fun_fact_dots_00.svg">
+            <div>
+                <p class="fun_fact_number">115</p>
+                <p>Project Done</p>
+            </div>
+            <img src="res/images/fun_fact_dots_01.svg">
+            <div>
+                <p class="fun_fact_number">8+</p>
+                <p>Years Of Experince</p>
+            </div>
+            <img src="res/images/fun_fact_dots_02.svg">
+            <div>
+                <p class="fun_fact_number">12</p>
+                <p>National Awards</p>
+            </div>
+        </div>
+    </section>
+    <section class="section mail_box">
+		<div class="section_view">
+			<div>
+				<div class="header mail_box_header">
+					<h1>Check Your Website Speed</h1>
+					<p>
+						Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business through revolutionary.
+					</p>
+				</div>
+				<menu>
+					<div>
+						<input class="site" placeholder="Web URL"/>
+						<div class="line"></div>
+						<input class="mail" placeholder="Email Address"/>
+					</div>
+					<button class="button check">Check</button>
+				</menu>
+			</div>
+			<img src="res/images/mail_box_bg.png">
+		</div>
+	</section>
 </body>
 </html>
