--- a/index.html
+++ b/index.html
@@ -197,5 +197,184 @@
 			<img src="res/images/mail_box_bg.png">
 		</div>
 	</section>
+    <section class="section plans">
+		<div class="section_view">
+			<div class="header plans_header">
+				<h1>Our Plans</h1>
+				<p>Choose the right SEO for you</p>
+			</div>
+			<div class="plan_view">
+				<div class="plan_sample">
+					<h3>Plus</h3>
+					<div class="price">
+						<span class="dollar">$</span>
+						<span class="value">30</span>
+						<span class="period">/month</span>
+					</div>
+					<ul class="plan_options">
+						<li>50GB Bandwidth</li>
+						<li>Business & Financ Analysing</li>
+						<li>24 Hour Support</li>
+						<li>Customer Managemet</li>
+					</ul>
+					<menu class="plan_menu">
+						<button class="button button_shadow">Get Started</button>
+					</menu>
+				</div>
+				<div class="plan_sample plan_recomended">
+					<h3>Beginner</h3>
+					<div class="price">
+						<span class="dollar">$</span>
+						<span class="value">55</span>
+						<span class="period">/month</span>
+					</div>
+					<ul class="plan_options">
+						<li>50GB Bandwidth</li>
+						<li>Business & Financ Analysing</li>
+						<li>24 Hour Support</li>
+						<li>Customer Managemet</li>
+					</ul>
+					<menu class="plan_menu">
+						<button class="button">Get Started</button>
+					</menu>
+				</div>
+				<div class="plan_sample">
+					<h3>Advanced</h3>
+					<div class="price">
+						<span class="dollar">$</span>
+						<span class="value">129</span>
+						<span class="period">/month</span>
+					</div>
+					<ul class="plan_options">
+						<li>50GB Bandwidth</li>
+						<li>Business & Financ Analysing</li>
+						<li>24 Hour Support</li>
+						<li>Customer Managemet</li>
+					</ul>
+					<menu class="plan_menu">
+						<button class="button button_shadow">Get Started</button>
+					</menu>
+				</div>
+			</div>
+		</div>
+	</section>
+    <section class="section teams">
+		<div class="section_view">
+			<div class="header">
+				<h1>Our Expert Team Members</h1>
+				<p class="subtitle">
+					This new-found knowledge may then be used by engineers to <br/> create new tools and machines.
+				</p>
+			</div>
+			<div class="persons">
+				<div class="person">
+					<img class="person_portrait" src="res/images/person_natasha.png">
+					<div class="person_info">
+						<h3>Nattasha</h3>
+						<p>Web Develper</p>
+					</div>
+					<menu class="link_menu">
+						<a class="link_facebook" href="#"></a>
+						<a class="link_twitter" href="#"></a>
+						<a class="link_linkedin" href="#"></a>
+						<a class="link_google" href="#"></a>
+					</menu>
+				</div>
+				<div class="person">
+					<img class="person_portrait" src="res/images/person_beginer.png">
+					<div class="person_info">
+						<h3>Beginer</h3>
+						<p>Web Develper</p>
+					</div>
+					<menu class="link_menu">
+						<a class="link_facebook" href="#"></a>
+						<a class="link_twitter" href="#"></a>
+						<a class="link_linkedin" href="#"></a>
+						<a class="link_google" href="#"></a>
+					</menu>
+				</div>
+				<div class="person">
+					<img class="person_portrait" src="res/images/person_harris_milas.png">
+					<div class="person_info">
+						<h3>Haris Milas</h3>
+						<p>Ceo & Co-Funder</p>
+					</div>
+					<menu class="link_menu">
+						<a class="link_facebook" href="#"></a>
+						<a class="link_twitter" href="#"></a>
+						<a class="link_linkedin" href="#"></a>
+						<a class="link_google" href="#"></a>
+					</menu>
+				</div>
+				<div class="person">
+					<img class="person_portrait" src="res/images/person_nelson_mecoy.png">
+					<div class="person_info">
+						<h3>Nelson Mecoy</h3>
+						<p>Marketing Manager</p>
+					</div>
+					<menu class="link_menu">
+						<a class="link_facebook" href="#"></a>
+						<a class="link_twitter" href="#"></a>
+						<a class="link_linkedin" href="#"></a>
+						<a class="link_google" href="#"></a>
+					</menu>
+				</div>
+			</div>
+		</div>
+	</section>
+    <footer class="section footer_site">
+		<div class="section_view">
+			<div class="footer_columns">
+				<div class="footer_column">
+					<div class="logo">
+						<img class="icon"  src="res/images/logo_icon.png">
+						<img class="label" src="res/images/logo_label.svg">
+					</div>
+					<div class="info">
+						<p>
+							Distinctively exploit optimal alignments for intuitive bandwidth. 
+							Quickly coordinate business through revolutionary.
+						</p>
+						<menu class="link_menu">
+							<a class="link_facebook" href="#"></a>
+							<a class="link_twitter"  href="#"></a>
+							<a class="link_linkedin" href="#"></a>
+							<a class="link_google"   href="#"></a>
+						</menu>
+					</div>
+				</div>
+				<div class="footer_column">
+					<h3>Our Company</h3>
+					<nav class="footer_nav">
+						<a href="#">About Us</a>
+						<a href="#">Our Services</a>
+						<a href="#">Our Plan</a>
+						<a href="#">Our Team</a>
+						<a href="#">Latest News</a>
+					</nav>				
+				</div>
+				<div class="footer_column">
+					<h3>Our Services</h3>
+					<nav class="footer_nav">
+						<a href="#">Digital Marketing</a>
+						<a href="#">SEO Optimazation</a>
+						<a href="#">Web Development</a>
+						<a href="#">Link Building</a>
+						<a href="#">Terms & Privacy</a>
+					</nav>
+				</div>
+				<div class="footer_column">
+					<h3>Contact Us</h3>
+					<nav class="footer_nav footer_contacts">
+						<p>Location: 1370 Orvilly Rot APT, New York, USA</p>
+						<p>Email: growbeinfo@gmail</p>
+						<p>Phone: +324-9332-5018</p>
+					</nav>
+				</div>
+			</div>
+			<div class="rectangle"></div>
+			<div class="copyright"><p>Copyright © GrowBe 2023. All Rights Reserved.</p></div>
+		</div>
+	</footer> 
 </body>
 </html>
