--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			</div>
 		</div>
 	</section>
-    <section class="section services">
+    <section class="section section_highlight services">
 		<div class="section_view">
 			<div class="services_info header">
 				<h1>Why You Should Choose Us.</h1>
@@ -197,7 +197,7 @@
 			<img src="res/images/mail_box_bg.png">
 		</div>
 	</section>
-    <section class="section plans">
+    <section class="section section_highlight plans">
 		<div class="section_view">
 			<div class="header plans_header">
 				<h1>Our Plans</h1>
